--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ body {
     text-align: center;
     padding: 20px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    height: 45px;
 }
 
 /* Estilização das seções de perguntas */
@@ -38,7 +39,7 @@ body {
     width: 100%;
     margin: 10px 0;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: lightseagreen;
     color: white;
     border: none;
     border-radius: 4px;
@@ -48,9 +49,23 @@ body {
 
 /* Estilo ao passar o mouse sobre os botões */
 .respostas input[type="button"]:hover {
-    background-color: #45a049;
+    background-color: lightgray;
 }
 
 .respostas input.active {
-    background-color: lightseagreen;
+    background-color: lightgreen;
+}
+
+.BotaoFinalizar input{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
 }
